AER3-345 Extended api yaml for everything farm lodging related
Using inheritance for all Category-like objects.
Sector is now Category-like (and ID is deprecated in favor of code. Kept around since it's an integer which is also used in IMAER).
